# systeminformation

./: .gitignore  .travis.yml  AUTHORS.md  README.md  app  me.Appadeia.systeminformation.json  meson.build
data/: me.Appadeia.systeminformation.appdata.xml  me.Appadeia.systeminformation.desktop  me.Appadeia.systeminformation.gresource.xml  me.Appadeia.systeminformation.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: me.Appadeia.systeminformation.pot
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala
src/controllers/: AppController.vala
src/views/: AppView.vala  DisplayView.vala  OsReleaseView.vala  ProcessorView.vala  SideBar.vala  SimpleView.vala
src/widgets/: DataRow.vala
tests/: assert.vala  test.vala
