sources += files(
    'configs/Constants.vala',
    
    'controllers/AppController.vala',
    
    'views/AppView.vala',
    'views/SideBar.vala',
    'views/SimpleView.vala',
    'views/ProcessorView.vala',
    'views/OsReleaseView.vala',
    'views/DisplayView.vala',

    'widgets/DataRow.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala',
)
